<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">divvie</string>

    <string name="account_email_exists_toast">There is already an account with this email.</string>
    <string name="add">Add</string>
    <string name="bill">Bill</string>
    <string name="cancel">Cancel</string>
    <string name="choose_payment_method">Choose a payment method:</string>
    <string name="complete">Complete</string>
    <string name="complete_form_toast">Please complete the form.</string>
    <string name="confirm">Confirm</string>
    <string name="create_group">Create Group</string>
    <string name="create_group_add_another">+ Add another</string>
    <string name="create_new_group_text">Create a New Group</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="deny">Deny</string>
    <string name="divvie_logo">Divvie Logo</string>
    <string name="download_venmo">Download Venmo</string>
    <string name="duplicate_email_alert_message"> Hmm, you seem to have a duplicate email. Correct
        this and try again.</string>
    <string name="duplicate_email_alert_title">Duplicate Email</string>
    <string name="email">Email</string>
    <string name="enter_valid_email_toast">Please enter a valid email.</string>
    <string name="for_description">for %1$s</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_alert_message">Enter the email associated with your
        account.</string>
    <string name="forgot_password_alert_title">Forgot Password</string>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="group_invalid_email_alert_message">Email %1$d is invalid. Correct this and try
        again.</string>
    <string name="group_invalid_email_alert_title">Invalid Email</string>
    <string name="group_name">Group Name</string>
    <string name="groups">Groups</string>
    <string name="invalid_amount_toast">The amount you entered is invalid.</string>
    <string name="logout">Logout</string>
    <string name="network_connection_create_group_alert_message">You are not connected to the
        internet and cannot create a group. Please try again when you gain connectivity.</string>
    <string name="network_connection_create_transaction_alert_message">You are not connected to the
        internet and cannot create a transaction. Please try again when you gain connectivity.</string>
    <string name="network_connection_sign_in_alert_message">You are not connected to the internet
        and cannot sign in. Please try again when you gain connectivity.</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="ok">OK</string>
    <string name="on">on</string>
    <string name="override">Paid?</string>
    <string name="paid">Paid</string>
    <string name="password">Password</string>
    <string name="password_length_toast">Password must be at least 6 characters.</string>
    <string name="password_match_toast">Passwords do not match.</string>
    <string name="pay_now">Pay Now</string>
    <string name="pay_person">Pay %1$s</string>
    <string name="pay_with_venmo">Pay with Venmo</string>
    <string name="person_owes_you">%1$s owes you %2$s</string>
    <string name="person_paid_you">%1$s paid you</string>
    <string name="person_paid_you_on">%1$s paid you on</string>
    <string name="record">Record</string>
    <string name="record_cash_payment">Record cash payment</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="register">Register</string>
    <string name="remind">Remind</string>
    <string name="reset">Reset</string>
    <string name="reset_failed_alert_message">The reset password failed. Please try again
        later.</string>
    <string name="reset_failed_alert_title">Reset Password Failed</string>
    <string name="reset_invalid_email_alert_message">The email you entered was invalid.</string>
    <string name="reset_no_account_alert_message"> The email you entered is not associated with an
        account.</string>
    <string name="reset_success_toast">Reset email sent!</string>
    <string name="sent_reminder_email">Reminder email sent!</string>
    <string name="send_reminder_email_failed">Reminder email send failed :(</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_failed_alert_message">Email or password invalid.</string>
    <string name="split_bill">Split Bill</string>
    <string name="transaction_amount_hint">$0.00</string>
    <string name="transaction_amount_owed">%1$s%2$s owed</string>
    <string name="transaction_description">for %1$s</string>
    <string name="transaction_description_hint">Enter a description</string>
    <string name="transaction_owes_you">%1$s owes you</string>
    <string name="transaction_paid_you">%1$s paid you</string>
    <string name="transaction_pending">Pending</string>
    <string name="transaction_pending_message">%1$s says they paid you for this transaction with
        cash.
    </string>
    <string name="transaction_you_owe">You owe %1$s</string>
    <string name="transaction_you_paid">You paid %1$s</string>
    <string name="transactions">Transactions</string>
    <string name="user_no_groups_toast">You must be in at least one group to create a
        transaction.</string>
    <string name="venmo_error">Venmo Error</string>
    <string name="venmo_not_installed">Venmo Not Installed</string>
    <string name="venmo_not_installed_message">You must have Venmo installed on your device to make
        a payment. Would you like to install the Venmo app?</string>
    <string name="venmo_success">Payment successful!</string>
    <string name="verify_record_cash_payment">Are you sure you would like to record this charge as
        paid?</string>
    <string name="with">with</string>

</resources>
