<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_gravity="left"
        android:textColor="@color/teal"
        android:textSize="30sp"
        android:text="@string/create_transaction"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_marginTop="11dp">

        <TextView
            android:id="@+id/billText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:text="@string/bill"/>

        <Spinner
            android:id="@+id/groupsDropDown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/billText"
            android:paddingLeft="10dp"
            android:spinnerMode="dropdown">
        </Spinner>

    </RelativeLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:hint="@string/transaction_description_hint"/>

    <EditText
        android:id="@+id/amount"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:inputType="numberDecimal"
        android:hint="@string/transaction_amount_hint"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:background="@drawable/round_button"
        android:textColor="#ffffff"
        android:text="@string/split_bill"
        android:onClick="onSplitBillClick"/>

</LinearLayout>