<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center" >

    <ImageView
        android:contentDescription="@string/divvie_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/divvie_logo_pink"/>

    <Button
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:onClick="onSignInClick"/>

    <Button
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:onClick="onRegisterClick"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/sign_in_with_facebook"
        android:textColor="@color/com_facebook_loginview_text_color"
        android:textSize="@dimen/com_facebook_loginview_text_size"
        android:textStyle="bold"

        android:background="@drawable/com_facebook_button_blue"
        android:drawableLeft="@drawable/com_facebook_inverse_icon"
        android:drawablePadding="@dimen/com_facebook_likebutton_compound_drawable_padding"
        android:paddingLeft="@dimen/com_facebook_loginview_padding_left"
        android:paddingTop="@dimen/com_facebook_loginview_padding_top"
        android:paddingRight="@dimen/com_facebook_loginview_padding_right"
        android:paddingBottom="@dimen/com_facebook_loginview_padding_bottom"
        android:onClick="onFacebookSignInClick"
        android:layout_marginTop="8dp" />
    
</LinearLayout>
